# cascadeeval-neurips2026-code

./: .gitignore  CODE_ARTIFACT.md  README.md  pyproject.toml  requirements.txt
artifacts/cascadeeval_hf_dataset_20260506/: DATASET_CARD.md  DATASHEET.md  ETHICS.md  LICENSE_CODE  LICENSE_GATED.md  LICENSE_PROPOSAL.md  README.md  REPRODUCIBILITY.md
artifacts/cascadeeval_hf_dataset_20260506/human_eval/: HUMAN_EVAL_SUMMARY.md
artifacts/cascadeeval_hf_dataset_20260506/metadata/: ACCESS_LEVELS.md  MANIFEST.csv  croissant.json
artifacts/cascadeeval_hf_dataset_20260506/scripts/: prepare_hf_dataset.sh
experiments/c3a/: .gitignore  README.md  config.yaml  part1_analysis.py  part1_detailed_analysis.py  part2_evaluate.py
experiments/c3a/fixtures/: mock_knowledge_base.json
experiments/c3a/scripts/: download_benchmark.py  run_pilot_evaluation.sh
paper/analysis/c3a_ci_cost_20260506/: README.md  audit_configuration_asr.csv  audit_summary_ci.csv  c3a_asr_ci.csv  c3a_cost_table.csv  c3a_delta_ci.csv  c3a_guidance_distribution.csv  compute_audit_ci.py  compute_c3a_ci_cost.py  compute_c3a_stage_distribution.py  technique_stage_pass_rates.csv
paper/data/: numbers.yaml
paper/data/gpu_results_20260505/: c3a_stage_distribution.csv
paper/figures/scripts/: _figure_utils.py  fig1_pipeline.py  fig2_asr_distribution.py  fig3_bottleneck_funnel.py  fig5_technique_heatmap.py  fig6_og_llm_heatmap.py  fig7_c3a_stage_distribution.py  fig8_c3a_guidance_distribution.py
src/c3a/: __init__.py  types.py
src/c3a/agent/: __init__.py  c3a.py  generator.py
src/c3a/baselines/: __init__.py  (+4 more)
(+21 files in other folders)
