[project]
name = "research-neurips2026"
version = "0.1.0"
description = "NeurIPS 2026 submission: Multi-layer LLM defense audit & evaluation (ED Track candidate)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10,<4.0",
    "numpy>=2.0,<3.0",
    "openai>=1.40,<2.0",
    "pandas>=2.2,<3.0",
    "pyyaml>=6.0,<7.0",
    "scipy>=1.13,<2.0",
    "seaborn>=0.13,<1.0",
    "python-dotenv>=1.0,<2.0",
    "datasets>=2.20,<4.0",
    "sentence-transformers>=3.0,<6.0",
    "torch>=2.3,<3.0",
    "transformers>=4.40,<5.0",
]

[project.optional-dependencies]
# Backward-compatible no-op: C3A experiment dependencies are installed by default
# so reviewer smoke tests do not require a special extra.
experiment = []

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0",
    "ruff>=0.6.0",
]
